@@ -1,3 +1,7 @@
+2002-01-19  Duncan Mak  <duncan@ximian.com>
+
+	* PolicyException.cs: New File.
+
 2002-01-03  Nick Drochak  <ndrochak@gol.com>
 
 	* IIdentityPermissionFactory.cs: New File
